# block-ciphers

./: Cargo.toml  README.md
.github/workflows/: aes.yml  blowfish.yml  cast5.yml  des.yml  idea.yml  kuznyechik.yml  magma.yml  rc2.yml  serpent.yml  sm4.yml  threefish.yml  twofish.yml  workspace.yml
aes/: Cargo.toml
aes/src/: armv8.rs  lib.rs  ni.rs  soft.rs
aes/src/armv8/: encdec.rs
aes/src/ni/: aes128.rs  aes192.rs  aes256.rs
aes/src/soft/: fixslice32.rs
blowfish/: Cargo.toml  README.md
blowfish/src/: lib.rs
cast5/: Cargo.toml  README.md
cast5/src/: lib.rs
des/: Cargo.toml  README.md
des/src/: des.rs  lib.rs  tdes.rs
idea/: Cargo.toml  README.md
idea/src/: lib.rs  tests.rs
kuznyechik/: Cargo.toml  README.md
kuznyechik/src/: lib.rs
kuznyechik/src/soft/: backends.rs  mod.rs
kuznyechik/src/sse2/: backends.rs  mod.rs
magma/: Cargo.toml  README.md
magma/src/: lib.rs
rc2/: Cargo.toml  README.md
rc2/src/: lib.rs
serpent/: Cargo.toml  README.md
serpent/src/: lib.rs
sm4/: Cargo.toml  README.md
sm4/src/: lib.rs
threefish/: Cargo.toml  README.md
threefish/src/: lib.rs
threefish/tests/: mod.rs
twofish/: Cargo.toml  README.md
twofish/src/: lib.rs
