[workspace]
members = [
    "aes",
    "blowfish",
    "cast5",
    "des",
    "idea",
    "kuznyechik",
    "magma",
    "rc2",
    "serpent",
    "sm4",
    "twofish",
    "threefish",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
cipher = { git = "https://github.com/RustCrypto/traits/", branch = "cipher_v0.4" }
inout = { git = "https://github.com/RustCrypto/utils", branch = "add_inout" }
