[package]
name = "blowfish"
version = "0.9.0" # Also update html_root_url in lib.rs when bumping this
description = "Blowfish block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/blowfish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "blowfish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4"
byteorder = { version = "1", default-features = false }

[dev-dependencies]
cipher = { version = "0.4", features = ["dev"] }

[features]
bcrypt = []
