[package]
name = "magma"
version = "0.8.0" # Also update html_root_url in lib.rs when bumping this
description = "Magma (GOST 28147-89 and GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/magma"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "magma", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.3"
