[package]
name = "threefish"
version = "0.5.0" # Also update html_root_url in lib.rs when bumping this
authors = ["The Rust-Crypto Project Developers"]
license = "MIT OR Apache-2.0"
description = "Threefish block cipher"
documentation = "https://docs.rs/threefish"
readme = "README.md"
edition = "2018"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "threefish", "gost", "block-cipher"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.3"
